--- a/apiExterneBlobus/src/main/resources/application.properties
+++ b/apiExterneBlobus/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/database_blobus
-spring.datasource.username=root
-spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://databaseblobus.mysql.database.azure.com:3306/database_blobus
+spring.datasource.username=blobusteam
+spring.datasource.password=Blobusteam2023!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port=8000
