--- a/apiExterneBlobus/pom.xml
+++ b/apiExterneBlobus/pom.xml
@@ -83,6 +83,11 @@
 			<version>8.0.0.Final</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.0</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
