--- a/apiExterneBlobus/src/main/resources/application.properties
+++ b/apiExterneBlobus/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.password=Blobusteam2023!
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update  
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQLDialect
+server.port:7000
