--- a/apiExterneBlobus/src/main/resources/application.properties
+++ b/apiExterneBlobus/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 logging.level.org.hibernate.SQL=DEBUG
 
 spring.datasource.url=jdbc:mysql://blobus.mysql.database.azure.com:3306/database_blobus?serverTimezone=UTC
-spring.datasource.username=api_externe_blobus
+spring.datasource.username=apiexterneblobus
 spring.datasource.password=Blobusteam2023!
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update  
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQLDialect
-server.port:7000
+//server.port:7000
