--- a/apiExterneBlobus/pom.xml
+++ b/apiExterneBlobus/pom.xml
@@ -101,6 +101,15 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 		</dependency>
+
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.5.9</version>
+		</dependency>
+
+
 	</dependencies>
 	<build>
 		<plugins>
