--- a/apiExterneBlobus/src/main/resources/application.properties
+++ b/apiExterneBlobus/src/main/resources/application.properties
@@ -7,4 +7,5 @@ spring.datasource.password=Blobusteam2023!
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update  
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQLDialect
-//server.port:7000
+server.port:7000
+#springdoc.swagger-ui.url=/v3/api-docs/swagger-config
