--- a/apiExterneBlobus/src/main/resources/application.properties
+++ b/apiExterneBlobus/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update  
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQLDialect
 server.port:7000
-#springdoc.swagger-ui.url=/v3/api-docs/swagger-config
+spring.resources.static-location=classpath:/static/
